--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -64,15 +64,15 @@ ion-title{
 	margin-left:20px;
 	font-size:15px;
 }
-ion-menu[type=reveal] {
-    z-index: 11;
-}
+//ion-menu[type=reveal] {
+//    z-index: 11;
+//}
 
 textarea{resize:none;}
 
-.bottom{
+/*.bottom{
 	margin-top:40px;
-}
+}*/
 
 .red{
 	background-color:red;
