--- a/src/app/app.html
+++ b/src/app/app.html
@@ -94,11 +94,57 @@
             </ion-item>
             <ion-item menuClose class="pointer" (click)="GoReasignar()">
                 Reasignar
-                <ion-icon name="ios-contacts" item-right></ion-icon>
+                <ion-icon name="contacts" item-right></ion-icon>
             </ion-item>
             <ion-item menuClose class="pointer" (click)="GoUsuarios()">
                 Usuarios
-                <ion-icon name="ios-people" item-right></ion-icon>
+                <ion-icon name="people" item-right></ion-icon>
+            </ion-item>                        
+            <ion-item menuClose class="pointer" color="danger" (click)="GoLogout()">
+                Cerrar sesión
+                <ion-icon name="power" item-right></ion-icon>
+            </ion-item>            
+        </ion-list>               
+    </ion-content>
+</ion-menu>
+
+<ion-menu [content]="content" side="left" id="admin">
+    <ion-header>
+        <ion-toolbar class="center side-bar">
+        	<img src="assets/imgs/user-sidebar-100.png"> <br>
+			<span class="user-name">Nombre de usuario</span>            
+        </ion-toolbar>
+    </ion-header>
+
+    <ion-content>                             
+        <ion-list>
+            <ion-item menuClose class="pointer" (click)="GoHomeB()">
+                Inicio
+                <ion-icon name="home" item-right></ion-icon>
+            </ion-item>
+            <ion-item menuClose class="pointer" (click)="GoNuevoB()">
+                Tomar ticket
+                <ion-icon name="add-circle" item-right></ion-icon>
+            </ion-item>
+            <ion-item menuClose class="pointer" (click)="GoProcesoB()">
+                En proceso
+                <ion-icon name="time" item-right></ion-icon>
+            </ion-item>
+            <ion-item menuClose class="pointer" (click)="GoHistorialB()">
+                Historial
+                <ion-icon name="albums" item-right></ion-icon>
+            </ion-item>
+            <ion-item menuClose class="pointer" (click)="GoReasignar()">
+                Reasignar
+                <ion-icon name="contacts" item-right></ion-icon>
+            </ion-item>
+            <ion-item menuClose class="pointer" (click)="GoUsuarios()">
+                Usuarios
+                <ion-icon name="people" item-right></ion-icon>
+            </ion-item>   
+            <ion-item menuClose class="pointer" (click)="GoEstats()">
+                Estadísticas
+                <ion-icon name="pie" item-right></ion-icon>
             </ion-item>                        
             <ion-item menuClose class="pointer" color="danger" (click)="GoLogout()">
                 Cerrar sesión
